# PosQuatEKF

./: .gitignore  CMakeLists.txt  README.md
data/: outliers.csv  poser.csv  test.csv
data/imu/: imu_calibration.txt
data/imu/full/: imu_aligned.txt  poses.txt  rgb_aligned.txt
data/imu/imu/: i10.csv  i100.csv  i1000.csv  i1001.csv  i1002.csv  i1003.csv  i1004.csv  i1005.csv  i1006.csv  i1007.csv  i1008.csv  i1009.csv  i101.csv  i1010.csv  i1011.csv  i1012.csv  i1013.csv  i1014.csv  i1015.csv  i1016.csv  i1017.csv  i1018.csv  i1019.csv  i102.csv  i1020.csv  i1021.csv  i1022.csv  i1023.csv  i1024.csv  i1025.csv  i1026.csv  i1027.csv  i1028.csv  i1029.csv  i103.csv  i1030.csv  i1031.csv  i1032.csv  i1033.csv  i1034.csv  (+7947 more)
data/imu/upto500/: imu_aligned.txt  poses.txt  rgb_aligned.txt
include/posquatekf/: LocalizationMeasurementModel.hpp  MotionModel.hpp  PoseStruct.h  pqekf.h
include/pqekf/: ExtendedKalmanFilter.hpp  imu.hpp  pqekf.hpp
tests/: CMakeLists.txt
tests/poser/: CMakeLists.txt  PoseStruct.h  example_poser.cpp  plots.h
